# toad

./: .gitignore  .gitmodules  BUILDING_AND_PUBLISHING.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL_LICENSE.md  DIRECTORY_SCAN_COMPARISON.md  FINAL_OPTIMIZATIONS.md  INSTALL.md  Makefile  OPTIMIZATION_SUMMARY.md  PARALLEL_FUZZY_SEARCH.md  README.md  RUST_DIRECTORY_SCANNER.md  RUST_FUZZY_INTEGRATION.md  RUST_FUZZY_SUMMARY.md  RUST_VS_PYTHON_FINAL.md  ansi_mandel.py  benchmark_complete.py  benchmark_detailed.py  benchmark_directory_scan.py  benchmark_early_rejection.py  benchmark_fuzzy.py  benchmark_parallel.py  benchmark_parallel_uncached.py  benchmark_prefiltering.py  benchmark_rust_vs_python.py  benchmark_top_k.py  check_root.py  check_rust_fuzzy.py  compare_results.py  compare_results2.py  dega-core.yaml  install.sh  pyproject.toml  replay.jsonl  test_batch_correctness.py  test_path_mode.py  test_rust_fuzzy.py  test_scroll_margins.py  (+1 more)
commands/: apply-canon-tui.md
docs/: adding-themes.md  async-phase-runner.md  canon-nba-strategy-crash.md  canon-right-pane-architecture.md  conductor-setup.md  contact-participants-panel-brief.md  demo-tui-layout.md  dev-state-schema.md  dev-textual-quirks.md  handoff-core-builder-logs.md  plan-execution-production-checklist.md  plan-tab-followups.md  pm-widget-oversight.md  prd-pm-widget.md  right-pane-v2-changelog.md  socket-controller.md  subagent-tabs-brief.md  third-party-module-integration.md
rust-fuzzy/: .gitignore  Cargo.toml  EARLY_REJECTION_ANALYSIS.md  OPTIMIZATIONS.md  PERFORMANCE.md  README.md  pyproject.toml
tests/: conftest.py  test_agent_panel_control.py  test_canon_sections.py  (+7 more)
(+165 files in other folders)
