[project]
name = "canon-tui"
version = "0.6.13"
description = "Canon TUI — a unified experience for AI in your terminal."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual[syntax]>=8.1.1",
    "click>=8.2.1",
    "tree-sitter>=0.24.0",
    "httpx>=0.28.1",
    "platformdirs>=4.9.4",
    "rich>=14.3.3",
    "typeguard==4.4.4",
    "xdg-base-dirs>=6.0.2",
    "textual-serve>=1.1.2",
    "textual-speedups==0.2.1",
    "packaging>=25.0",
    "bashlex>=0.18",
    "pathspec>=0.12.1",
    "notify-py>=0.3.43",
    "pyperclip>=1.11.0",
    "watchdog>=6.0.0",
    "setproctitle>=1.3.7",
    "psutil>=7.2.1",
    "aiosqlite>=0.22.1",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/DEGAorg/canon-tui"
Repository = "https://github.com/DEGAorg/canon-tui"
Issues = "https://github.com/DEGAorg/canon-tui/issues"
Changelog = "https://github.com/DEGAorg/canon-tui/blob/main/CHANGELOG.md"

[tool.uv.workspace]
members = [
    "toad",
]

[tool.uv.sources]
#textual-serve = { path = "../textual-serve", editable = true }
#textual = { path = "../textual", editable = true }
#textual-dev = { path = "../textual-dev", editable = true }
#rich = { path = "../rich", editable = true }

[project.scripts]
canon = "toad.cli:main"
canon-ctl = "toad.ctl:main"

[build-system]
requires = ["hatchling==1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toad"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pyinstrument>=5.1.1",
    "textual-dev>=1.8.0",
]
